# warno-bark-mod

./: .gitignore  README.md  pyproject.toml
StratVOMod/: GenerateMod.bat
WoofWoofMod/CommonData/Clusters/: _TemplateClusters.ndf
src/mycli/: main.py  test_main.py
